--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build Custom GeoIP Files
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # 添加手动触发
+  workflow_dispatch:  # 添加手动触发（可选）
 
 jobs:
   build:
@@ -23,9 +23,9 @@ jobs:
       - name: Build Custom GeoIP
         run: go run ./ convert -c ./config.json
 
-      # 上传生成的 .dat 文件
+      # 上传生成的 .dat 文件（升级到 v4）
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: custom-geoip-files
           path: "*.dat"
