--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,61 @@
 name: Build Custom GeoIP Files
 
 on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:  # 添加手动触发（可选）
+  workflow_dispatch:  # 保留手动触发
+  push:              # 保留推送触发
+    branches:
+      - master
+    paths-ignore:
+      - ".gitignore"
+      - "LICENSE*"
+      - "*.md"
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      # 检出仓库代码
-      - name: Checkout Repository
-        uses: actions/checkout@v3
-
-      # 设置 Go 环境
-      - name: Set up Go
-        uses: actions/setup-go@v3
+      - name: Checkout codebase
+        uses: actions/checkout@v4
         with:
-          go-version: '1.21'
+          fetch-depth: 0
 
-      # 运行 geoip 程序生成 .dat 文件
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version-file: ./go.mod
+
+      - name: Set variables
+        run: |
+          echo "TAG_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
+          echo "RELEASE_NAME=$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
+        shell: bash
+
       - name: Build Custom GeoIP
-        run: go run ./ convert -c ./config.json
+        run: |
+          echo "Current directory contents:"
+          ls -la
+          go build ./
+          ./geoip convert -c ./config.json || { echo "Convert failed"; exit 1; }
+          echo "Files after conversion:"
+          ls -la
 
-      # 上传生成的 .dat 文件（升级到 v4）
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: custom-geoip-files
-          path: "*.dat"
+          path: "customip.dat"
+
+      - name: Generate sha256 checksum for dat files
+        run: |
+          cd ./ || exit 1
+          sha256sum customip.dat > ./customip.dat.sha256sum
+
+      - name: Upload files to GitHub release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file_glob: true
+          file: ./customip.dat ./customip.dat.sha256sum
+          release_name: ${{ env.RELEASE_NAME }}
+          tag: ${{ env.TAG_NAME }}
