--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build geoip files
 on:
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * 4"
+#  schedule:
+#    - cron: "0 0 * * 4"
   push:
     branches:
       - master
